--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
-/* .car-image {
-  width: 66.6%;
-} */
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
+
+.App {
+  font-family: "Comfortaa", cursive;
+}
